--- a/cities.html
+++ b/cities.html
@@ -33,7 +33,8 @@
      <div class="col-md">delhi</div> 
     </div>
     <p>
-        col-sm is used for smaller screens such as tablets,mobilephones whereas the col-md is used for larger screens such desktops and laptops
+        the letters breaks first because col-sm is used for smaller screens such as tablets,mobilephones 
+        whereas the col-md is used for larger screens such desktops and laptops
         if we reduce the size of the screen it will automatically turns into columns as seen above.
     </p>
 
