--- a/cities.html
+++ b/cities.html
@@ -17,20 +17,20 @@
 </body>
 <div class="container">
     <div class="row">
-     <div class="col-sm-2">B</div>   
-     <div class="col-sm-2">O</div>   
-     <div class="col-sm-2">P</div> 
-     <div class="col-sm-2">P</div> 
-     <div class="col-sm-2">U</div>  
-     <div class="col-sm-2">D</div>      
+     <div class="col-sm-2" style="background-color: rgb(228, 173, 173);">B</div>   
+     <div class="col-sm-2" style="background-color: rgb(228, 173, 173);">O</div>   
+     <div class="col-sm-2" style="background-color: rgb(228, 173, 173);">P</div> 
+     <div class="col-sm-2" style="background-color: rgb(228, 173, 173);">P</div> 
+     <div class="col-sm-2" style="background-color: rgb(228, 173, 173);">U</div>  
+     <div class="col-sm-2" style="background-color: rgb(228, 173, 173);">D</div>      
     </div>
     <div class="row">
-     <div class="col-md">Bangalore</div>   
-     <div class="col-md">ooty</div>   
-     <div class="col-md">punjab</div> 
-     <div class="col-md">pune</div> 
-     <div class="col-md">uttarakandh</div>  
-     <div class="col-md">delhi</div> 
+     <div class="col-md" style="background-color: rgb(173, 228, 194);">Bangalore</div>   
+     <div class="col-md" style="background-color: rgb(173, 228, 194);">ooty</div>   
+     <div class="col-md" style="background-color: rgb(173, 228, 194);">punjab</div> 
+     <div class="col-md" style="background-color: rgb(173, 228, 194);">pune</div> 
+     <div class="col-md" style="background-color: rgb(173, 228, 194);">uttarakandh</div>  
+     <div class="col-md" style="background-color: rgb(173, 228, 194);">delhi</div> 
     </div>
     <p>
         the letters breaks first because col-sm is used for smaller screens such as tablets,mobilephones 
