--- a/cities.html
+++ b/cities.html
@@ -13,7 +13,7 @@
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
 <body>
-<head>Visit cities with Srikanth Boppudi</head>
+<h1>Visit cities with Srikanth Boppudi</h1>
 </body>
 <div class="container">
     <div class="row">
