--- a/cities.html
+++ b/cities.html
@@ -39,4 +39,85 @@
     </p>
 
 </div>
+<div class="container">
+  <img src="bang.jpg" class="img-fluid" height="400" width="400" alt="banglore">
+  <img src="delhi.jpg" class="img-fluid" height="400" width="400" alt="delhi">
+  <img src="ooty.jpg" class="img-fluid" height="400" width="400" alt="ooty">
+</div>
+<div class="container2">
+    <img src="bang.jpg" class="img-thumbnail" height="400" width="400" alt="banglore">
+    <img src="delhi.jpg" class="img-thumbnail" height="400" width="400" alt="delhi">
+    <img src="ooty.jpg" class="img-thumbnail" height="400" width="400" alt="ooty">
+</div>
+
+<table class="table table-striped table-bordered table-hover">
+  <caption>
+    Environment
+  </caption>
+  <tr>
+  <th scope="col">#</th>
+  <th scope="col">Letter</th>
+  <th scope="col">City</th>
+  <th scope="col">River</th>
+  <th scope="col">Tree</th>
+  </tr>
+  <tr class="table-primary">
+    <th scope="row">1</th>
+    <td>B</td>
+    <td>banglore</td>
+    <td class="table-active">Boardman River</td>
+    <td>bamboo</td>
+  </tr>
+  <tr class="table-secondary">
+    <th scope="row">2</th>
+    <td>o</td>
+    <td>ooty</td>
+    <td class="table-active">Ocklawaha River</td>
+    <td>olive</td>
+  </tr>
+  <tr class="table-success">
+    <th scope="row">3</th>
+    <td>p</td>
+    <td>punjab</td>
+    <td>Pea River</td>
+    <td>Pea</td>
+  </tr>
+  <tr class="table-danger">
+    <th scope="row">4</th>
+    <td>p</td>
+    <td>pune</td>
+    <td>Peace River</td>
+    <td>padauk</td>
+  </tr>
+  <tr class="table-warning">
+    <th scope="row">5</th>
+    <td>u</td>
+    <td>uttarakandh</td>
+    <td>Ugashik River</td>
+    <td>ugni</td>
+  </tr>
+  <tr class="table-light">
+    <th scope="row">6</th>
+    <td>d</td>
+    <td>delhi</td>
+    <td>Doe River</td>
+    <td>Daphne laureola</td>
+  </tr>
+</table>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+<div  class="btn-group me-2" role="group" aria-label="First group">
+  <button type="button" class="btn btn-success">B</button>
+  <button type="button" class="btn btn-success">D</button>
+  <button type="button" class="btn btn-success">O</button>
+</div>
+<div  class="btn-group me-2" role="group" aria-label="Second group">
+  <button type="button" class="btn btn-warning">P</button>
+  <button type="button" class="btn btn-warning">U</button>
+</div>
+<div  class="btn-group me-2" role="group" aria-label="third group">
+  <button type="button" class="btn btn-danger">P</button>
+</div>
+</div>
+navigation bar</nav>
 </html>
