--- a/cities.html
+++ b/cities.html
@@ -14,6 +14,24 @@
 </head>
 <body>
 <h1>Visit cities with Srikanth Boppudi</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <anchor class="navbar-brand">
+    <a href="cities.html">A Few Cities</a>
+  </anchor>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="basic.html">Basic</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="advanced.html">Advanced</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 </body>
 <div class="container">
     <div class="row">
@@ -120,4 +138,23 @@
 </div>
 </div>
 navigation bar</nav>
+
+<div class="container mt-5">
+  <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+          <label for="city">City</label>
+          <input type="text" class="form-control" id="city" placeholder="Enter your city">
+      </div>
+      <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="newsletter">
+          <label class="form-check-label" for="newsletter">Sign up for newsletter?</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
 </html>
