--- a/cities.html
+++ b/cities.html
@@ -157,4 +157,30 @@ navigation bar</nav>
       <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
+<div class="card" style="width: 18rem;">
+  <img src="delhi.jpg" class="card-img-top" alt="Delhi">
+  <div class="card-body">
+    <h5 class="card-title">Delhi</h5>
+    <p class="card-text">Delhi is the capital of india.
+      It is situated in the north-central part of the country on
+     the west bank of the Yamuna River, adjacent to and just south of Delhi city (Old Delhi) and within the Delhi national capital territory.</p>
+    <a href="https://www.britannica.com/place/New-Delhi" class="btn btn-primary">more info</a>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="bang.jpg" class="card-img-top" alt="Bangalore">
+  <div class="card-body">
+    <h5 class="card-title">Bangalore</h5>
+    <p class="card-text">Bangalore officially Bengaluru is the capital and largest city of the southern Indian state of Karnataka.Bangalore is sometimes referred to as the “Silicon Valley of India” (or “IT capital of India”) 
+    because of its role as the nation's leading information technology (IT) exporter.</p>
+    <a href="https://en.wikipedia.org/wiki/Bangalore" class="btn btn-primary">more info</a>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="ooty.jpg" class="card-img-top" alt="Ooty">
+  <div class="card-body">
+    <h5 class="card-title">Ooty</h5>
+    <p class="card-text">Ooty is one of the famous tourisim spot in India.It is located in the niligiri hills which is also called as the 
+      blue mountains.Ooty, popularly known as the 'Queen of Hill Stations' is nestled in the Nilgiri hills in Tamil Nadu.
+    </p>
+    <a href="https://en.wikipedia.org/wiki/Ooty" class="btn btn-primary">more info</a>
+</div>
 </html>
