--- a/cities.html
+++ b/cities.html
@@ -57,7 +57,7 @@
     </p>
 
 </div>
-<div class="container">
+<div class="container1">
   <img src="bang.jpg" class="img-fluid" height="400" width="400" alt="banglore">
   <img src="delhi.jpg" class="img-fluid" height="400" width="400" alt="delhi">
   <img src="ooty.jpg" class="img-fluid" height="400" width="400" alt="ooty">
@@ -157,6 +157,8 @@ navigation bar</nav>
       <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
+
+<div class="row">
 <div class="card" style="width: 18rem;">
   <img src="delhi.jpg" class="card-img-top" alt="Delhi">
   <div class="card-body">
@@ -166,6 +168,8 @@ navigation bar</nav>
      the west bank of the Yamuna River, adjacent to and just south of Delhi city (Old Delhi) and within the Delhi national capital territory.</p>
     <a href="https://www.britannica.com/place/New-Delhi" class="btn btn-primary">more info</a>
 </div>
+</div>
+
 <div class="card" style="width: 18rem;">
   <img src="bang.jpg" class="card-img-top" alt="Bangalore">
   <div class="card-body">
@@ -174,6 +178,8 @@ navigation bar</nav>
     because of its role as the nation's leading information technology (IT) exporter.</p>
     <a href="https://en.wikipedia.org/wiki/Bangalore" class="btn btn-primary">more info</a>
 </div>
+</div>
+
 <div class="card" style="width: 18rem;">
   <img src="ooty.jpg" class="card-img-top" alt="Ooty">
   <div class="card-body">
@@ -182,5 +188,7 @@ navigation bar</nav>
       blue mountains.Ooty, popularly known as the 'Queen of Hill Stations' is nestled in the Nilgiri hills in Tamil Nadu.
     </p>
     <a href="https://en.wikipedia.org/wiki/Ooty" class="btn btn-primary">more info</a>
+</div>
+</div>
 </div>
 </html>
